--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,16 +9,14 @@ body {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    height:100px;
-    width: 100px !important;
+    padding-top: 150px;
+    height:110px;
+    width: 110px;
   }
   .home {
     background-color: #242935;
     height: 100vh;
     text-align: center;
-    .head {
-      height: 150px;
-    }
     .i-am {
       margin-bottom: 50px;
     }
@@ -31,7 +29,7 @@ body {
       font-size: 20px;
       padding: 15px;
       .fas {
-        margin-right: 10px;
+        padding-left: 10px;
       }
     }
     a:hover {
@@ -44,10 +42,8 @@ body {
     }
   }
   .about{
-    // height: 100vh;
     background-color: #ececec;
     padding: 30px 0 ;
-    // padding-top: 20px;
     h2 {
       color: #f7006d;
       text-align: center;
@@ -99,8 +95,7 @@ body {
     text-align: center;
     padding: 30px;
   }
-  .grit {
-    // height: 100vh;
+  .desktop {
     background-color: #242935;
     img {
       display: block;
@@ -108,20 +103,16 @@ body {
       margin-right: auto;
       height: 15vh;
     }
-    .dive-down-logo {
-      padding-top: 30px;
-    }
     .project {
       padding-top: 30px;
       display: flex;
       justify-content: space-around;
       flex-wrap: wrap;
-      .grit-image {
+      .desktop-image {
         max-width: 40%;
         margin-left: 40px;
         img {
           height: 250px;
-          // width:50%;
         }
       }
       .description {
@@ -130,7 +121,6 @@ body {
         p {
           margin: 0 auto 0 auto;
           font-size: 20px;
-          font-family: 'Raleway', sans-serif;
           margin-bottom: 30px;
         }
         a { // app and github buttons
@@ -139,7 +129,6 @@ body {
           border-radius: 5px;
           text-decoration: none;
           color: #f7006d;
-          font-family: 'Raleway', sans-serif;
           font-size: 20px;
           padding: 10px;
           margin-right: 15px;
@@ -155,7 +144,7 @@ body {
           font-size: 21px;
         }
       }
-      .grit-tech {
+      .desktop-tech {
         width: 100%;
         ul {
           display: flex;
@@ -196,7 +185,6 @@ body {
       }
       h2 {
         display: inline;
-        font-family: 'Rubik', sans-serif;
         color: #f7006d;
         font-size: 80px;
         margin-bottom: 20px;
@@ -220,8 +208,6 @@ body {
         p {
           margin: 0 auto 0 auto;
           font-size: 20px;
-          font-family: 'Raleway', sans-serif;
-          // margin-bottom: 120px;
           margin-bottom: 30px;
         }
         a { // app and github buttons
@@ -230,7 +216,6 @@ body {
           border-radius: 5px;
           text-decoration: none;
           color: #f7006d;
-          font-family: 'Raleway', sans-serif;
           font-size: 20px;
           padding: 10px;
           margin-right: 15px;
@@ -320,4 +305,32 @@ body {
       }
     }
   }
+
+  @media screen and (max-device-width: 420px) {
+    .home {
+      padding-top: 350px;
+      .avatar {
+        height: 200px;
+        width: 200px;
+      }
+      p {
+        font-size: 70px;
+      }
+      .i-am {
+        margin-bottom: 140px;
+      }
+      a {
+        font-size: 50px;
+        border: 4px solid white;
+      }
+    }
+    .about {
+      // height: 100vh;
+      padding-bottom: 50px;
+      p{
+        font-size: 16px;
+      }
+    }
+  }
+
 }
